# BissiMamba

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  CONCEPT.md  CONFIG_PARAM_LOG.md  CONTEXT.md  ESTIMATIONS.md  ESTIMATIONS_BISSIMAMBA.md  GUIDE.md  INDEX.md  LICENSE  MATHEMATICS.md  Makefile  OPTIMIZATIONS.md  PLAN.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_EN.md  SOURCES.md  TESTS.md  TEST_RESULTS.md  THEORY.md  TRAINING_STATUS.md  advanced_example.c  chat.c  download_data.py  email_rodeo.html  generate_data.py  generate_mamba.sh  lm.c  lm.h  main.c  mamba.c  mamba.h  mamba_chat  mamba_cuda.cu  mamba_large.h  (+15 more)
bench/: CMakeLists.txt  bench_paper.c
cmake/: k-mambaConfig.cmake.in
configs/: cifar10.json  synthetic_2d.json
cpu/: CMakeLists.txt  mamba_scan.c  scan1d.asm  scan1d_backward_m1_shared_bc.asm  scan1d_backward_m1_shared_bc_simple.asm  scan2d.asm
cuda/: CMakeLists.txt  convnd.cu  convnd_cuda_common.cuh  convnd_separable.cu  kmamba_checkpoint.cu  kmamba_cuda_utils.cu  kmamba_distributed.cu  kmamba_kernels.cu  kmamba_mixed_precision.cu  mamba_block.cu  mamba_scan.cu  scan1d.cu  scan_nd.cu
figures/: plot_convnd_benchmark.py  plot_convnd_benchmark_en.py  plot_convnd_cuda_benchmark.py
include/: configs.h  convnd.h  km_memory_pool.h  km_topology.h  kmamba.h  kmamba_checkpoint.h  kmamba_cuda_utils.h  kmamba_distributed.h  kmamba_kernels.h  kmamba_mixed_precision.h  kmamba_ser.h  mamba_scan.h  mamba_scan_2d.h  mamba_scan_cuda.h  scan.h  scan_nd.h  wavefront_plan.h
kernels/: elementwise_f32.c  gemm_f32.c  init_f32.c
models/: cifar10.c  main.c  (+10 more)
(+102 files in other folders)
